# lens

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  lens.dev.toml  lens.example.toml
.claude/skills/lens-mcp-code/: SKILL.md
.claude/skills/lens-mcp-desktop/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  docker-prod-image.yml  push-to-prod.yml  release.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CheckList.tsx  DeeperCallout.tsx  DnsSection.tsx  DomainInput.tsx  EmailSection.tsx  HttpSection.tsx  IpSection.tsx  Landing.test.tsx  Landing.tsx  SectionHeadline.tsx  SectionSkeleton.tsx  SuiteNav.tsx  Summary.tsx  TlsSection.tsx  ValidationChips.tsx  VerdictDot.tsx
frontend/src/lib/: api.ts  checkMeta.ts  export.ts  gradeLegend.ts  history.ts  sse.ts  types.ts
frontend/src/styles/: global.css
profiles/: default.toml
specs/done/sdd/: lens-beacon-original.md  lens-beacon.md
src/: api_doc.rs  cache.rs  check.rs  config.rs  error.rs  input.rs  lib.rs  main.rs  routes.rs  spa.rs  state.rs
src/backends/: dns.rs  email.rs  http.rs  ip.rs  mod.rs  sse.rs  tls.rs
src/scoring/: engine.rs  mod.rs  profile.rs
src/security/: ip_extract.rs  mod.rs  rate_limit.rs  target_policy.rs
tests/: reference_domains.rs  scoring_regression.rs
tests/email_fixtures/: beacon_timeout.json  mail_domain.json  no_mx.json  partial_fail.json
